--- a/main_Eric.ipynb
+++ b/main_Eric.ipynb
@@ -37,17 +37,323 @@
     },
     {
       "metadata": {
+        "id": "1akWNshagQDH",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 0. Installing all the required packages"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "hzo-e4T4gPLY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# to install pytorch on colab\n",
+        "from os import path\n",
+        "from wheel.pep425tags import get_abbr_impl, get_impl_ver, get_abi_tag\n",
+        "platform = '{}{}-{}'.format(get_abbr_impl(), get_impl_ver(), get_abi_tag())\n",
+        "\n",
+        "accelerator = 'cu80' if path.exists('/opt/bin/nvidia-smi') else 'cpu'\n",
+        "\n",
+        "!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.4.1-{platform}-linux_x86_64.whl torchvision"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "tAwwD5pkgvS9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "outputId": "95c035f0-14bd-4ce4-c6a6-c2c06538897b"
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install -U bcolz"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting bcolz\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5c/4e/23942de9d5c0fb16f10335fa83e52b431bcb8c0d4a8419c9ac206268c279/bcolz-1.2.1.tar.gz (1.5MB)\n",
+            "\u001b[K    100% |████████████████████████████████| 1.5MB 6.6MB/s \n",
+            "\u001b[?25hRequirement already satisfied, skipping upgrade: numpy>=1.7 in /usr/local/lib/python3.6/dist-packages (from bcolz) (1.14.6)\n",
+            "Building wheels for collected packages: bcolz\n",
+            "  Running setup.py bdist_wheel for bcolz ... \u001b[?25l-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \bdone\n",
+            "\u001b[?25h  Stored in directory: /root/.cache/pip/wheels/9f/78/26/fb8c0acb91a100dc8914bf236c4eaa4b207cb876893c40b745\n",
+            "Successfully built bcolz\n",
+            "Installing collected packages: bcolz\n",
+            "Successfully installed bcolz-1.2.1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "pvVBq1R8gyxx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "outputId": "a96344c2-c45d-4d6a-b5e2-2cd5ddeffb2f"
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install Pillow==4.0.0"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting Pillow==4.0.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/37/e8/b3fbf87b0188d22246678f8cd61e23e31caa1769ebc06f1664e2e5fe8a17/Pillow-4.0.0-cp36-cp36m-manylinux1_x86_64.whl (5.6MB)\n",
+            "\u001b[K    100% |████████████████████████████████| 5.6MB 5.3MB/s \n",
+            "\u001b[?25hRequirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from Pillow==4.0.0) (0.46)\n",
+            "\u001b[31mtorchvision 0.2.1 has requirement pillow>=4.1.1, but you'll have pillow 4.0.0 which is incompatible.\u001b[0m\n",
+            "Installing collected packages: Pillow\n",
+            "  Found existing installation: Pillow 5.3.0\n",
+            "    Uninstalling Pillow-5.3.0:\n",
+            "      Successfully uninstalled Pillow-5.3.0\n",
+            "Successfully installed Pillow-4.0.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "33dB1KwHg3yE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from PIL import Image\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torchvision\n",
+        "from torchvision import models,transforms,datasets\n",
+        "import bcolz\n",
+        "import time\n",
+        "%matplotlib inline"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "i6atcHTPe4wn",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "## 1. Loading the data"
+        "## 1. Downloading the data"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Z_J5tcFyiMIj",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "First, we create the directory where we will store the data:"
       ]
     },
     {
       "metadata": {
         "id": "-E8_cSDccpfa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2b25318c-d08d-4d91-9361-7acc283b2922"
+      },
+      "cell_type": "code",
+      "source": [
+        "%mkdir data\n",
+        "%cd data/"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "_7FIZ09mikGe",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Now we retrive the data from kaggle:"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "7pMACLVSijFj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 218
+        },
+        "outputId": "343ee769-dff5-40fc-cc36-31a6c9bc5c4c"
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install kaggle\n",
+        "\n",
+        "from googleapiclient.discovery import build\n",
+        "import io, os\n",
+        "from googleapiclient.http import MediaIoBaseDownload\n",
+        "from google.colab import auth\n",
+        "\n",
+        "auth.authenticate_user()\n",
+        "drive_service = build('drive', 'v3')\n",
+        "results = drive_service.files().list(q=\"name = 'kaggle.json'\", fields=\"files(id)\").execute()\n",
+        "kaggle_api_key = results.get('files', [])\n",
+        "filename = \"/content/.kaggle/kaggle.json\"\n",
+        "os.makedirs(os.path.dirname(filename), exist_ok=True)\n",
+        "request = drive_service.files().get_media(fileId=kaggle_api_key[0]['id'])\n",
+        "fh = io.FileIO(filename, 'wb')\n",
+        "downloader = MediaIoBaseDownload(fh, request)\n",
+        "done = False\n",
+        "while done is False:\n",
+        "    status, done = downloader.next_chunk()\n",
+        "    print(\"Download %d%%.\" % int(status.progress() * 100))\n",
+        "os.chmod(filename, 600)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: kaggle in /usr/local/lib/python3.6/dist-packages (1.4.7.1)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from kaggle) (2018.8.24)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.26.0)\n",
+            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.2.6)\n",
+            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.11.0)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.5.3)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.18.4)\n",
+            "Requirement already satisfied: urllib3<1.23.0,>=1.15 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.22)\n",
+            "Requirement already satisfied: Unidecode>=0.04.16 in /usr/local/lib/python3.6/dist-packages (from python-slugify->kaggle) (1.0.22)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (3.0.4)\n",
+            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (2.6)\n",
+            "Download 100%.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "rw1PR_NBiySA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 470
+        },
+        "outputId": "4d991a8b-698d-43f3-8aa4-b6b6cc90882a"
+      },
+      "cell_type": "code",
+      "source": [
+        "!ls -a\n",
+        "import json\n",
+        "token = {\"username\":\"\",\"key\":\"\"}\n",
+        "with open(\"/content/.kaggle/kaggle.json\", \"w\") as file:\n",
+        "    json.dump(token, file)\n",
+        "!chmod 600 /content/.kaggle/kaggle.json\n",
+        "!cp /content/.kaggle/kaggle.json ~/.kaggle/kaggle.json\n",
+        "!kaggle config set -n path -v{/content/data}\n",
+        "!kaggle competitions download -c planet-understanding-the-amazon-from-space"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " .   ..  '{'\n",
+            "- path is now set to: {/content/data}\n",
+            "Downloading train-jpg.tar.7z to {/content/data}/competitions/planet-understanding-the-amazon-from-space\n",
+            " 98% 589M/600M [00:10<00:00, 75.5MB/s]\n",
+            "100% 600M/600M [00:10<00:00, 58.5MB/s]\n",
+            "Downloading test-jpg.tar.7z to {/content/data}/competitions/planet-understanding-the-amazon-from-space\n",
+            "100% 603M/603M [00:15<00:00, 6.34MB/s]\n",
+            "100% 603M/603M [00:15<00:00, 40.9MB/s]\n",
+            "Downloading train-tif-v2.tar.7z to {/content/data}/competitions/planet-understanding-the-amazon-from-space\n",
+            "100% 12.9G/12.9G [09:08<00:00, 12.7MB/s]\n",
+            "\n",
+            "Downloading test-tif-v2.tar.7z to {/content/data}/competitions/planet-understanding-the-amazon-from-space\n",
+            " 74% 14.4G/19.4G [10:11<03:35, 25.3MB/s]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/bin/kaggle\", line 11, in <module>\n",
+            "    sys.exit(main())\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/kaggle/cli.py\", line 50, in main\n",
+            "    out = args.func(**command_args)\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/kaggle/api/kaggle_api_extended.py\", line 677, in competition_download_cli\n",
+            "    quiet)\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/kaggle/api/kaggle_api_extended.py\", line 644, in competition_download_files\n",
+            "    force, quiet)\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/kaggle/api/kaggle_api_extended.py\", line 622, in competition_download_file\n",
+            "    self.download_file(response, outfile, quiet)\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/kaggle/api/kaggle_api_extended.py\", line 1451, in download_file\n",
+            "    out.write(data)\n",
+            "OSError: [Errno 28] No space left on device\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "UyNDn2rKq1bQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Check files:\n",
+        "!cd /content/data"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "-pCUP-ODqJOk",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 2.  Loading the data"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "VfL0ylhzqFjo",
         "colab_type": "code",
         "colab": {}
       },
