--- a/model2_hidden_layers.ipynb
+++ b/model2_hidden_layers.ipynb
@@ -40,7 +40,11 @@
       "metadata": {
         "id": "vDd0uFd2udSm",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "77f4ff4a-4367-4da8-ad35-33d0d14238d7"
       },
       "cell_type": "code",
       "source": [
@@ -53,30 +57,46 @@
         "\n",
         "!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.4.1-{platform}-linux_x86_64.whl torchvision"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tcmalloc: large alloc 1073750016 bytes == 0x55e1e000 @  0x7fdf5cfb22a4 0x594e17 0x626104 0x51190a 0x4f5277 0x510c78 0x5119bd 0x4f5277 0x4f3338 0x510fb0 0x5119bd 0x4f5277 0x4f3338 0x510fb0 0x5119bd 0x4f5277 0x4f3338 0x510fb0 0x5119bd 0x4f6070 0x510c78 0x5119bd 0x4f5277 0x4f3338 0x510fb0 0x5119bd 0x4f6070 0x4f3338 0x510fb0 0x5119bd 0x4f6070\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "Ql1P1A4yus4B",
         "colab_type": "code",
-        "outputId": "b742c15b-674a-4a9b-9c76-406985563554",
+        "outputId": "94aed057-943c-4931-8255-b3bc735c80a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
+          "height": 185
         }
       },
       "cell_type": "code",
       "source": [
         "!pip install -U bcolz"
       ],
-      "execution_count": 44,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already up-to-date: bcolz in /usr/local/lib/python3.6/dist-packages (1.2.1)\n",
-            "Requirement already satisfied, skipping upgrade: numpy>=1.7 in /usr/local/lib/python3.6/dist-packages (from bcolz) (1.14.6)\n"
+            "Collecting bcolz\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5c/4e/23942de9d5c0fb16f10335fa83e52b431bcb8c0d4a8419c9ac206268c279/bcolz-1.2.1.tar.gz (1.5MB)\n",
+            "\u001b[K    100% |████████████████████████████████| 1.5MB 9.0MB/s \n",
+            "\u001b[?25hRequirement already satisfied, skipping upgrade: numpy>=1.7 in /usr/local/lib/python3.6/dist-packages (from bcolz) (1.14.6)\n",
+            "Building wheels for collected packages: bcolz\n",
+            "  Running setup.py bdist_wheel for bcolz ... \u001b[?25l-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \b|\b \b/\b \b-\b \b\\\b \bdone\n",
+            "\u001b[?25h  Stored in directory: /root/.cache/pip/wheels/9f/78/26/fb8c0acb91a100dc8914bf236c4eaa4b207cb876893c40b745\n",
+            "Successfully built bcolz\n",
+            "Installing collected packages: bcolz\n",
+            "Successfully installed bcolz-1.2.1\n"
           ],
           "name": "stdout"
         }
@@ -86,24 +106,25 @@
       "metadata": {
         "id": "DgpyYMXsu_IL",
         "colab_type": "code",
-        "outputId": "a6ab7198-092b-487e-fc9e-5a964da7f7dd",
+        "outputId": "5c4bf013-e2f4-43c2-9e39-2b1a90948f8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 168
+          "height": 185
         }
       },
       "cell_type": "code",
       "source": [
         "!pip install Pillow==4.0.0"
       ],
-      "execution_count": 45,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting Pillow==4.0.0\n",
-            "  Using cached https://files.pythonhosted.org/packages/37/e8/b3fbf87b0188d22246678f8cd61e23e31caa1769ebc06f1664e2e5fe8a17/Pillow-4.0.0-cp36-cp36m-manylinux1_x86_64.whl\n",
-            "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from Pillow==4.0.0) (0.46)\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/37/e8/b3fbf87b0188d22246678f8cd61e23e31caa1769ebc06f1664e2e5fe8a17/Pillow-4.0.0-cp36-cp36m-manylinux1_x86_64.whl (5.6MB)\n",
+            "\u001b[K    100% |████████████████████████████████| 5.6MB 7.4MB/s \n",
+            "\u001b[?25hRequirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from Pillow==4.0.0) (0.46)\n",
             "\u001b[31mtorchvision 0.2.1 has requirement pillow>=4.1.1, but you'll have pillow 4.0.0 which is incompatible.\u001b[0m\n",
             "Installing collected packages: Pillow\n",
             "  Found existing installation: Pillow 5.3.0\n",
@@ -151,7 +172,7 @@
       "metadata": {
         "id": "WM7hZrucl9PE",
         "colab_type": "code",
-        "outputId": "2eb2cc0b-2e53-4a22-b734-7e6f27d8e633",
+        "outputId": "c3224ab0-d7ec-49d1-9b86-8960e8e4e721",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -166,7 +187,7 @@
         "if use_gpu:\n",
         "    dtype = torch.cuda.FloatTensor"
       ],
-      "execution_count": 47,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +271,7 @@
       "metadata": {
         "id": "BHfKaA10ycIf",
         "colab_type": "code",
-        "outputId": "b7f32737-4e73-4c29-a05b-3dcedbdd4197",
+        "outputId": "cb5a515b-deb8-4db4-962d-f1fc46da6859",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -262,13 +283,13 @@
         "print(dsets['train'].imgs[:5]) # 5 first images and labels \n",
         "print(dsets['train'].imgs[len(dsets['train'])-5:]) # 5 last images and labels "
       ],
-      "execution_count": 51,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[('/content/data/sample/train/clear/train_10.jpg', 0), ('/content/data/sample/train/clear/train_10001.jpg', 0), ('/content/data/sample/train/clear/train_10013.jpg', 0), ('/content/data/sample/train/clear/train_10014.jpg', 0), ('/content/data/sample/train/clear/train_10038.jpg', 0)]\n",
-            "[('/content/data/sample/train/partly_cloudy/train_9849.jpg', 3), ('/content/data/sample/train/partly_cloudy/train_9851.jpg', 3), ('/content/data/sample/train/partly_cloudy/train_9892.jpg', 3), ('/content/data/sample/train/partly_cloudy/train_9921.jpg', 3), ('/content/data/sample/train/partly_cloudy/train_9997.jpg', 3)]\n"
+            "[('/content/data/sample/train/clear/train_10031.jpg', 0), ('/content/data/sample/train/clear/train_10042.jpg', 0), ('/content/data/sample/train/clear/train_10061.jpg', 0), ('/content/data/sample/train/clear/train_10085.jpg', 0), ('/content/data/sample/train/clear/train_10143.jpg', 0)]\n",
+            "[('/content/data/sample/train/partly_cloudy/train_9892.jpg', 3), ('/content/data/sample/train/partly_cloudy/train_9899.jpg', 3), ('/content/data/sample/train/partly_cloudy/train_9913.jpg', 3), ('/content/data/sample/train/partly_cloudy/train_9974.jpg', 3), ('/content/data/sample/train/partly_cloudy/train_9976.jpg', 3)]\n"
           ],
           "name": "stdout"
         }
@@ -278,7 +299,7 @@
       "metadata": {
         "id": "-enxZHd-mHzt",
         "colab_type": "code",
-        "outputId": "e8bfefac-10c0-4ef9-f0a7-8ea7b694f2b6",
+        "outputId": "344fcf9f-418f-4a59-cdb2-fbb58958189f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -290,13 +311,13 @@
         "print(dsets['test'].imgs[:5]) # 5 first images and labels \n",
         "print(dsets['test'].imgs[len(dsets['test'])-5:]) # 5 last images and labels "
       ],
-      "execution_count": 52,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[('/content/data/sample/test/clear/train_10077.jpg', 0), ('/content/data/sample/test/clear/train_10155.jpg', 0), ('/content/data/sample/test/clear/train_10198.jpg', 0), ('/content/data/sample/test/clear/train_10315.jpg', 0), ('/content/data/sample/test/clear/train_10369.jpg', 0)]\n",
-            "[('/content/data/sample/test/partly_cloudy/train_9552.jpg', 3), ('/content/data/sample/test/partly_cloudy/train_969.jpg', 3), ('/content/data/sample/test/partly_cloudy/train_9720.jpg', 3), ('/content/data/sample/test/partly_cloudy/train_9772.jpg', 3), ('/content/data/sample/test/partly_cloudy/train_994.jpg', 3)]\n"
+            "[('/content/data/sample/test/clear/train_10046.jpg', 0), ('/content/data/sample/test/clear/train_10136.jpg', 0), ('/content/data/sample/test/clear/train_10156.jpg', 0), ('/content/data/sample/test/clear/train_10185.jpg', 0), ('/content/data/sample/test/clear/train_1042.jpg', 0)]\n",
+            "[('/content/data/sample/test/partly_cloudy/train_9483.jpg', 3), ('/content/data/sample/test/partly_cloudy/train_9520.jpg', 3), ('/content/data/sample/test/partly_cloudy/train_9660.jpg', 3), ('/content/data/sample/test/partly_cloudy/train_9802.jpg', 3), ('/content/data/sample/test/partly_cloudy/train_9979.jpg', 3)]\n"
           ],
           "name": "stdout"
         }
@@ -306,7 +327,7 @@
       "metadata": {
         "id": "x8yvakTTyAmi",
         "colab_type": "code",
-        "outputId": "0f04097c-8002-4437-cfd3-183a03af1940",
+        "outputId": "44a275d6-76be-4918-d641-47da00ee00ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -317,7 +338,7 @@
         "dset_classes = dsets['train'].classes\n",
         "dset_classes # binary classes to begin "
       ],
-      "execution_count": 53,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -329,7 +350,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 11
         }
       ]
     },
@@ -353,7 +374,7 @@
       "metadata": {
         "id": "om8qegy4aGrO",
         "colab_type": "code",
-        "outputId": "fc5b0125-dac9-48e4-dea2-998171baaa99",
+        "outputId": "90b7d43b-e9bd-49d6-c531-c09bfdc250f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
@@ -364,7 +385,7 @@
         "print(len(dsets['train']))\n",
         "print(len(dsets['test']))"
       ],
-      "execution_count": 55,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,19 +425,19 @@
         "        self.conv1 = nn.Conv2d(in_channels = 3, out_channels = 32, kernel_size=5)\n",
         "        self.conv2 = nn.Conv2d(in_channels = 32, out_channels = 64, kernel_size=5)\n",
         "        self.conv2_drop = nn.Dropout2d()\n",
-        "        self.fc1 = nn.Linear(4096, 256)\n",
-        "        self.fc2 = nn.Linear(256, 4)\n",
+        "        self.fc1 = nn.Linear(in_features = 4096, out_features = 256)\n",
+        "        self.fc2 = nn.Linear(in_features = 256, out_features = 4)\n",
         "\n",
         "    def forward(self, x):\n",
         "        # First Conv block:\n",
         "        x = self.conv1(x)\n",
-        "        x = F.max_pool2d(x, 5)\n",
+        "        x = F.max_pool2d(x, kernel_size = 5, stride = 5)\n",
         "        x = F.relu(x)\n",
         "        \n",
         "        # Second Conv block:\n",
         "        x = self.conv2(x)\n",
         "        x = self.conv2_drop(x)\n",
-        "        x = F.max_pool2d(x, 5)\n",
+        "        x = F.max_pool2d(x, kernel_size = 5, stride = 5)\n",
         "        x = F.relu(x)\n",
         "        \n",
         "        # Flatten:\n",
@@ -516,11 +537,11 @@
       "metadata": {
         "id": "VftjxsGtGKvy",
         "colab_type": "code",
+        "outputId": "0c4649dc-02a6-4f87-c13b-f6a21db8614d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
-        },
-        "outputId": "02100e4e-9c0c-411e-cd2f-73f3d6ffbf72"
+          "height": 353
+        }
       },
       "cell_type": "code",
       "source": [
@@ -541,30 +562,31 @@
         "# and train for 20 epochs\n",
         "l_t, a_t = train(model, dset_loaders['train'], loss_fn, optimizer_cl, n_epochs = 20)"
       ],
-      "execution_count": 58,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train - Loss: 0.0147 Acc: 0.6052\n",
-            "Train - Loss: 0.0134 Acc: 0.6516\n",
-            "Train - Loss: 0.0129 Acc: 0.6711\n",
-            "Train - Loss: 0.0121 Acc: 0.7003\n",
-            "Train - Loss: 0.0116 Acc: 0.7119\n",
-            "Train - Loss: 0.0109 Acc: 0.7275\n",
-            "Train - Loss: 0.0110 Acc: 0.7338\n",
-            "Train - Loss: 0.0103 Acc: 0.7569\n",
-            "Train - Loss: 0.0100 Acc: 0.7631\n",
-            "Train - Loss: 0.0098 Acc: 0.7692\n",
-            "Train - Loss: 0.0096 Acc: 0.7731\n",
-            "Train - Loss: 0.0095 Acc: 0.7756\n",
-            "Train - Loss: 0.0096 Acc: 0.7736\n",
-            "Train - Loss: 0.0094 Acc: 0.7822\n",
-            "Train - Loss: 0.0093 Acc: 0.7823\n",
-            "Train - Loss: 0.0091 Acc: 0.7825\n",
-            "Train - Loss: 0.0089 Acc: 0.7945\n",
-            "Train - Loss: 0.0087 Acc: 0.7928\n",
-            "Train - Loss: 0.0085 Acc: 0.7964\n"
+            "Train - Loss: 0.0146 Acc: 0.6025\n",
+            "Train - Loss: 0.0130 Acc: 0.6553\n",
+            "Train - Loss: 0.0123 Acc: 0.6852\n",
+            "Train - Loss: 0.0119 Acc: 0.6981\n",
+            "Train - Loss: 0.0112 Acc: 0.7172\n",
+            "Train - Loss: 0.0109 Acc: 0.7297\n",
+            "Train - Loss: 0.0107 Acc: 0.7348\n",
+            "Train - Loss: 0.0105 Acc: 0.7483\n",
+            "Train - Loss: 0.0103 Acc: 0.7544\n",
+            "Train - Loss: 0.0101 Acc: 0.7575\n",
+            "Train - Loss: 0.0098 Acc: 0.7594\n",
+            "Train - Loss: 0.0093 Acc: 0.7739\n",
+            "Train - Loss: 0.0092 Acc: 0.7786\n",
+            "Train - Loss: 0.0090 Acc: 0.7816\n",
+            "Train - Loss: 0.0090 Acc: 0.7792\n",
+            "Train - Loss: 0.0090 Acc: 0.7839\n",
+            "Train - Loss: 0.0089 Acc: 0.7887\n",
+            "Train - Loss: 0.0087 Acc: 0.7861\n",
+            "Train - Loss: 0.0083 Acc: 0.7956\n",
+            "Train - Loss: 0.0081 Acc: 0.8014\n"
           ],
           "name": "stdout"
         }
@@ -620,11 +642,11 @@
       "metadata": {
         "id": "OcpLu8PJkida",
         "colab_type": "code",
+        "outputId": "7aac16a0-8d88-49a4-9582-b2732b093807",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9e56ad5a-dcd3-40f8-b3c5-55a5e3f05bd1"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -632,12 +654,12 @@
         "\n",
         "test(model, dset_loaders['test'])"
       ],
-      "execution_count": 62,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Test - Loss: 0.0089 Acc: 0.7894\n"
+            "Test - Loss: 0.0087 Acc: 0.7844\n"
           ],
           "name": "stdout"
         }
