--- a/binary_downloading_from_kaggle.ipynb
+++ b/binary_downloading_from_kaggle.ipynb
@@ -31,6 +31,8 @@
    },
    "outputs": [],
    "source": [
+    "# modify according to kaggle username and key\n",
+    "\n",
     "!pip install -U -q kaggle\n",
     "!mkdir -p ~/.kaggle\n",
     "!echo '{\"username\":\"xxx\",\"key\":\"xxx\"}' > ~/.kaggle/kaggle.json\n",
