--- a/building_simple_model.ipynb
+++ b/building_simple_model.ipynb
@@ -248,8 +248,8 @@
     "data_dir = '/content/data/sample'\n",
     "#data_dir = '/content/data'\n",
     "\n",
-    "#batch_size = 4\n",
-    "batch_size = 64"
+    "batch_size = 64\n",
+    "#batch_size = 4"
    ]
   },
   {
